# psiengine_public

./: .gitignore  .gitmodules  README.md
engine/: CMakeLists.txt  conanfile.txt  psiengine.code-workspace
engine/assets/scripts/: audio.lua  cube_grid.lua  dna_snake.lua  gltf_models.lua  hypercube.lua  icosahedron_ball.lua  merkaba.lua  normal_vis.lua  platonic_solids.lua  pong_game.lua  prism_grid.lua  snake.lua  starfield.lua  text.lua  transparent_textures.lua
engine/assets/scripts/game/: area.lua  ball.lua  player.lua  target.lua
engine/assets/scripts/psi/: camera.lua  color.lua  core.lua  fonts.lua  grids.lua  input.lua  keyb.lua  obj.lua  renderer.lua  shader.lua  texture.lua  util.lua
engine/assets/shaders/: .phong.frag.swp  .phong.vert.swp  basic_lightning.frag  basic_lightning.vert  cubemap.frag  cubemap.vert  feedback.frag  feedback.vert  grid.frag  grid.vert  normal_vis.frag  normal_vis.geom  normal_vis.vert  passthrough.frag  passthrough.vert  phong.frag  phong.vert  phong_cubemap.frag  phong_cubemap.vert  phong_textured.frag  phong_textured.vert  phong_textured_alpha.frag  phong_textured_anim.frag  phong_textured_anim.vert  points.frag  points.geom  points.vert  points_textured.frag  points_textured.geom  text.frag  text.vert
engine/assets/skrolli/: buddha.gltf  skrolli.lua
engine/design/scenes/: PsiTriangleEngineLogo01.geokone
engine/src/: InputHandler.cpp  InputHandler.h  LuaAPI.cpp  LuaAPI.h  ProgramOptions.h  main.cpp
